kubernetes/hexon-config/hexon-config-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hexon-config-deployment
spec:
  selector:
    matchLabels:
      app: hexon-config-service
  replicas: 1
  template:
    metadata:
      labels:
        app: hexon-config-service
    spec:
      containers:
      - name: hexon-config-service
        image: hexon-config-service:1.0.0-SNAPSHOT
        ports:
        - containerPort: 9000
          name: service
        - containerPort: 9001
          name: management
        volumeMounts:
          - name: ssh-key-volume
            mountPath: /root/.ssh
      volumes:
        - name: ssh-key-volume
          secret:
            secretName: private-ssh-key
            defaultMode: 256
