kubernetes/hexon-config/hexon-config-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hexon-config-service
spec:
  selector:
    app: hexon-config-service
  ports:
  - port: 9000
    targetPort: 9000
    name: service
    protocol: TCP
  - port: 9001
    targetPort: 9001
    name: actuator
    protocol: TCP
  type: NodePort
